--- a/Oficina.csproj
+++ b/Oficina.csproj
@@ -93,6 +93,12 @@
     <Compile Include="frmCliente.Designer.cs">
       <DependentUpon>frmCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmFimPedido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmFimPedido.Designer.cs">
+      <DependentUpon>frmFimPedido.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmFornecedor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,6 +181,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmCliente.resx">
       <DependentUpon>frmCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmFimPedido.resx">
+      <DependentUpon>frmFimPedido.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmFornecedor.resx">
       <DependentUpon>frmFornecedor.cs</DependentUpon>
